[package]
name = "tree-sitter-conllu"
description = "Parser for dependency treebanks in CONLLU format"
version = "0.1.0"
authors = ["Pierre Magistry <pierre.magistry@inalco.fr>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "conllu"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-conllu"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
